avoid that the session save timer messes up session saving

we need to ensure it doesn't trigger during window/app closing

BUG: 470293


(cherry picked from commit 772450c9fb3217373ab3d279dfc5df0b4c741d3c)